Fix Bot Chat (still WIP, need to add more logic with upcoming features)
Start of adding tasks for bots
Move combat ai to another file

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -191,6 +191,7 @@ set (game_SRCS
     PlayerBots/BattleBotAI.cpp
     PlayerBots/BattleBotWaypoints.cpp
     PlayerBots/WorldBotAI.cpp
+    PlayerBots/WorldBotCombatAI.cpp
     PlayerBots/WorldBotWaypoints.cpp
     PlayerBots/PlayerBotAI.cpp
     PlayerBots/PlayerBotMgr.cpp
