--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -72,6 +72,7 @@ dungeons/gnomeregan/boss_thermaplugg.cpp
 dungeons/gnomeregan/gnomeregan.cpp
 dungeons/gnomeregan/gnomeregan.h
 dungeons/gnomeregan/instance_gnomeregan.cpp
+dungeons/hateforge_quarry/boss_hargesh_doomcaller.cpp
 dungeons/karazhan_crypt/instance_karazhan_crypt.cpp
 dungeons/crescent_grove/instance_crescent_grove.cpp
 dungeons/maraudon/boss_celebras_the_cursed.cpp
