--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -136,11 +136,18 @@ dungeons/ruins_of_ahnqiraj/npc_sandstalker.cpp
 dungeons/ruins_of_ahnqiraj/ruins_of_ahnqiraj.cpp
 dungeons/ruins_of_ahnqiraj/ruins_of_ahnqiraj.h
 dungeons/scarlet_citadel/boss_abbendis.cpp
+dungeons/scarlet_citadel/boss_abbendis.hpp
 dungeons/scarlet_citadel/boss_ardaeus.cpp
+dungeons/scarlet_citadel/boss_ardaeus.hpp
 dungeons/scarlet_citadel/boss_daelus.cpp
+dungeons/scarlet_citadel/boss_daelus.hpp
 dungeons/scarlet_citadel/boss_mariella.cpp
+dungeons/scarlet_citadel/boss_mariella.hpp
 dungeons/scarlet_citadel/instance_scarlet_citadel.cpp
+dungeons/scarlet_citadel/trashbosses_scarlet_citadel.cpp
+dungeons/scarlet_citadel/trashbosses_scarlet_citadel.hpp
 dungeons/scarlet_citadel/trashmobs_scarlet_citadel.cpp
+dungeons/scarlet_citadel/trashmobs_scarlet_citadel.hpp
 dungeons/scarlet_citadel/scarlet_citadel.h
 dungeons/scarlet_monastery/boss_arcanist_doan.cpp
 dungeons/scarlet_monastery/boss_azshir_the_sleepless.cpp
