Add faster regex engine and replace part of codebase with it

--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -183,4 +183,7 @@ if(MINGW)
   target_link_libraries(shared ${ACE_LIBRARIES} -lws2_32)
 endif()
 
+target_link_libraries(shared PUBLIC re2::re2)
+
+
 SET_TARGET_PROPERTIES (shared PROPERTIES FOLDER "Game Libs")
